k8s/user-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth-deployment-dev
  namespace: proptuity-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth-api
  template:
    metadata:
      labels:
        app: user-auth-api
    spec:
      containers:
      - name: user-auth-api
        image: rahulrambo9/user-auth-proptuity:v6
        resources:
          requests:
            memory: "512Mi"   # Minimum memory request: 512 MiB
            cpu: "250m"       # Minimum CPU request: 0.25 CPU (250 millicores)
          limits:
            memory: "1Gi"     # Maximum memory limit: 1 GiB
            cpu: "500m"       # Maximum CPU limit: 0.5 CPU (500 millicores)
        volumeMounts:
        - name: env-file
          mountPath: /src/.env.dev
          subPath: .env.dev  # Mount the .env file from the ConfigMap to /src/.env
        - name: env-file
          mountPath: /src/tmp/.env.dev
          subPath: .env.dev  # Mount the .env file to /src/tmp/.env
        - name: env-file
          mountPath: /.env.dev
          subPath: .env.dev  # Mount the .env file to /.env  
        readinessProbe:
          exec:
            command: ["cat", "/src/.env.dev"]  # Adjust to correct path if necessary
          initialDelaySeconds: 5
          periodSeconds: 10    
      volumes:
      - name: env-file
        configMap:
          name: my-configmap-dev
          optional: false
