k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: proptuity-dev
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80   # Expose HTTP port
    targetPort: 80
  type: ClusterIP   # ClusterIP is the default and suitable for internal communication
