k8s/ingress-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  namespace: proptuity-dev
  annotations:
    kubernetes.io/ingress.class: "gce"  # Ensure to use the correct ingress class
spec:
  rules:
    - http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: frontend-service
          #       port:
          #         number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-auth-api-service
                port:
                  number: 3000
